--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-git add requirements.txt
-git commit -m "Added requirements.txt"
-git push origin main  # or master, depending on your branch
+streamlit>=1.0.0
+pandas>=1.3.0
+numpy>=1.21.0
